add data, core layer and controller for city and district

--- a/WeatherApi/appsettings.json
+++ b/WeatherApi/appsettings.json
@@ -8,6 +8,7 @@
     "AllowedHosts": "*",
     "WeatherApiKey": "fd49ea1bffb941d59c095841240104",
     "ConnectionStrings": {
+        "PostgresConnection": "Username=admin; Password=deneme123; Host=localhost; Port=5431; Database=WeatherDb",
         "Redis": "localhost"
     }
 }
